--- a/demo.html
+++ b/demo.html
@@ -5,8 +5,18 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
-    <h1>Beaches - Traveling</h1>
+    <header>
+      <h1>Beaches - Traveling</h1>
 
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Book</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
     <!-- A paragraph -->
     <p>Enter the world of relaxation. Travel to beach today to experience the ultimate relaxation experience. See below for what your vacation
     could look like if you book now.</p>
