Added container, about_us section and styled the about us section. Also removed the a tag for the book now link and made it into a button

--- a/demo.html
+++ b/demo.html
@@ -11,19 +11,46 @@
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#">Book</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
-    <!-- A paragraph -->
-    <p>Enter the world of relaxation. Travel to beach today to experience the ultimate relaxation experience. See below for what your vacation
-    could look like if you book now.</p>
 
-    <a href="https://www.google.com">Book Now</a>
+    <div class="container">
+      <!-- A paragraph -->
+      <p>Enter the world of relaxation. Travel to beach today to experience the ultimate relaxation experience. See below for what your vacation
+      could look like if you book now.</p>
 
-    <!-- Img of a beach -->
-    <img src="http://www.beaches.com/assets/img/home/rst-btc.jpg" />
+      <button id="book_now">Book Now</button>
+
+      <!-- Img of a beach -->
+      <img src="http://www.beaches.com/assets/img/home/rst-btc.jpg" />
+
+      <!-- About us section details -->
+      <div class="about_site">
+        <section id="about">
+          <h2>About Us</h2>
+
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            euismod condimentum nunc at aliquam. Donec mollis convallis odio, a
+            tempor dolor facilisis at. Nulla condimentum, enim eget eleifend vulputate,
+            ante diam iaculis tortor, vitae fringilla erat turpis id urna. Curabitur nec
+            mollis purus. Morbi hendrerit ac risus in bibendum. Sed velit ante, hendrerit aliquet magna eu,
+            dictum elementum tellus. Etiam ex risus, sollicitudin id elit sit amet, suscipit euismod turpis.
+          </p>
+
+          <p>
+            Praesent pulvinar eros ligula, in pharetra dolor rutrum quis. Aenean rutrum nisi nec arcu vehicula condimentum.
+            In hac habitasse platea dictumst. Aenean vitae ex elit. Nulla rutrum
+            sodales feugiat. Morbi porta erat lectus, sed suscipit erat vulputate
+            nec. Duis ullamcorper tempor quam. Nulla varius, augue vel bibendum
+            venenatis, enim enim varius mi, vitae fermentum velit turpis vitae neque. Nullam in tincidunt orci. Fusce euismod
+            vitae massa ut lacinia.
+          </p>
+        </section>
+      </div>
+    </div>
   </body>
 </html>
