Added book and contact us sections

--- a/demo.html
+++ b/demo.html
@@ -12,8 +12,8 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="#">Book</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#book">Book</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -49,6 +49,49 @@
             venenatis, enim enim varius mi, vitae fermentum velit turpis vitae neque. Nullam in tincidunt orci. Fusce euismod
             vitae massa ut lacinia.
           </p>
+        </section>
+      </div>
+
+      <div class="book_vacay">
+        <section id="book">
+          <h2>Book Now</h2>
+
+          <form class="book_form">
+            <label for="first_name">First Name: </label>
+            <input type="text" name="first_name">
+
+            <label for="last_name">Last Name: </label>
+            <input type="text" name="last_name">
+
+            <label for="email">Email: </label>
+            <input type="email" name="email">
+
+            <label for="start_vacay">Begin Vacay: </label>
+            <input type="date" name="start_vacay">
+
+            <label for="end_vacay">End Vacay: </label>
+            <input type="date" name="end_vacay">
+
+            <label for="ppl">Number of People: </label>
+            <input type="number" name="num_ppl">
+
+            <input type="submit" name="submit" value="Submit" id="submit_btn">
+
+          </form>
+        </section>
+      </div>
+
+      <div class="contact_us">
+        <section id="contact">
+          <h2>Need to Speak to a Human?</h2>
+          <h4>Phone: 444-888-1234</h4>
+          <h4>Email: info@beachesvacay.com</h4>
+
+          <h2>Contact Us</h2>
+          <h4>Twitter: @beachesVacay</h4>
+          <h4>Instagram: @beachesVacay</h4>
+          <h4>Snapchat: @beachesVacay</h4>
+          <h4>Youtube: @beachesVacay</h4>
         </section>
       </div>
     </div>
