--- a/demo.html
+++ b/demo.html
@@ -94,6 +94,10 @@
           <h4>Youtube: @beachesVacay</h4>
         </section>
       </div>
+
+      <footer>
+        <p id="copyright">Copyright 2017 Tiffany</p>
+      </footer>
     </div>
   </body>
 </html>
