--- a/demo.html
+++ b/demo.html
@@ -14,6 +14,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#book">Book</a></li>
           <li><a href="#contact">Contact</a></li>
+          <li><a href="#test">Test</a></li>
         </ul>
       </nav>
     </header>
